--- a/index.html
+++ b/index.html
@@ -11,14 +11,7 @@
         <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
     </head>
 <body>
-        <div class="container col-md-8 col-md-offset-2">
-            <div class="header clearfix">
-                <nav>
-                    <ul class="nav nav-pills pull-right">
-                        <li role="presentation" class="active">
-                            <a class="btn btn-default" data-toggle="modal" data-target="#myModal" href="#">Thông tin web</a>
-                        </li>
-                    </ul>
+       
                     <h4 class="text-muted">Chuyển tin nhắn sang dạng icon</h4>
                 </nav>
             </div>
@@ -82,7 +75,7 @@
             <footer class="footer">
                 <p>Công cụ chuyển đổi tin nhắn sang dạng icon | Hãy sử dụng cho vui, đừng sử dụng để cắm sừng 😀</p>
                 <p>
-                    Viết bởi <a href="https://www.facebook.com/cuytcute/">Cuýt</a>
+             copy bởi <a href="https://www.facebook.com/phuocan.vr/">An</a>
                     .
                 </p>
             </footer>
@@ -94,15 +87,7 @@
                             <h4 class="modal-title">Giới thiệu về trang web</h4>
                         </div>
                         <div class="modal-body">
-                            <p>Gần đây trên MXH Facebook xuất hiện đoạn tin nhắn của chàng trai được cho là đã "cắm sừng" cô gái bằng tin nhắn mã hóa theo phong cách icon. Chi tiết ra sao, mời các bạn sử dụng trang web</p>
-                            <p>
-                                Link: <a href="https://www.facebook.com/groups/483716932807416/posts/558972278615214/">https://www.facebook.com/groups/483716932807416/posts/558972278615214/</a>
-                            </p>
-                            <p>Mình tạo trang này nhằm hỗ trợ chuyển đổi tin nhắn sang dạng icon (theo các thông tin thu thập được từ note của chàng trai) cho các bạn tò mò, muốn tìm hiểu.</p>
-                            <p>P/s: Không hiểu sao trong ghi chú không có chữ "j" trong khi vẫn có 2 chữ "w" và "z". <a href="https://raw.githubusercontent.com/quyt0/txt-icon/main/note.txt">Chi tiết xem tại đây</a> </p>
-                        </div>
-                        <div class="modal-footer">
-                            <button type="button" class="btn btn-default" data-dismiss="modal">Đóng</button>
+                           
                         </div>
                     </div>
                 </div>
