--- a/index.html
+++ b/index.html
@@ -27,7 +27,63 @@
                 <p>Công cụ chuyển đổi tin nhắn sang dạng icon | Hãy sử dụng cho vui, đừng sử dụng để cắm sừng 😀</p>
                 <p>
                     Viết bởi <a href="https://www.facebook.com/phuocan.vr/">An</a>
-                    .
+                    .  <div class="form-group">
+                <label for="origin-text" id="typeConvert">Nhập đoạn văn bản cần chuyển đổi: (Loại dịch: Tin nhắn ---&gt; icon)</label>
+                <textarea class="form-control" rows="8" id="origin-text" style="font-size: 13pt ; font-family:Segoe UI Emoji"></textarea>
+            </div>
+
+        <div class="intercom-composer-popover intercom-composer-emoji-popover">
+            <div class="intercom-emoji-picker">
+                <div class="intercom-composer-popover-header">
+                    <input class="intercom-composer-popover-input" placeholder="Nhập chữ cái để tìm icon" value="">
+                </div>
+                <div class="intercom-composer-popover-body-container">
+                    <div class="intercom-composer-popover-body">
+                        <div class="intercom-emoji-picker-groups">
+                            <div class="intercom-emoji-picker-group">
+                                <span class="intercom-emoji-picker-emoji" title="Aa">😀</span>
+                                <span class="intercom-emoji-picker-emoji" title="Bb">😃</span>
+                                <span class="intercom-emoji-picker-emoji" title="Cc">😁</span>
+                                <span class="intercom-emoji-picker-emoji" title="Dd">😅</span>
+                                <span class="intercom-emoji-picker-emoji" title="Ee">🥰</span>
+                                <span class="intercom-emoji-picker-emoji" title="Ff">🤣</span>
+                                <span class="intercom-emoji-picker-emoji" title="Gg">🥲</span>
+                                <span class="intercom-emoji-picker-emoji" title="Hh">☺️</span>
+                                <span class="intercom-emoji-picker-emoji" title="Ii">😊</span>
+                                <span class="intercom-emoji-picker-emoji" title="Kk">😇</span>
+                                <span class="intercom-emoji-picker-emoji" title="Ll">😉</span>
+                                <span class="intercom-emoji-picker-emoji" title="Mm">😒</span>
+                                <span class="intercom-emoji-picker-emoji" title="Nn">😞</span>
+                                <span class="intercom-emoji-picker-emoji" title="Oo">😙</span>
+                                <span class="intercom-emoji-picker-emoji" title="Pp">😟</span>
+                                <span class="intercom-emoji-picker-emoji" title="Qq">😕</span>
+                                <span class="intercom-emoji-picker-emoji" title="Rr">🙂</span>
+                                <span class="intercom-emoji-picker-emoji" title="Ss">🙃</span>
+                                <span class="intercom-emoji-picker-emoji" title="Tt">☹️</span>
+                                <span class="intercom-emoji-picker-emoji" title="Uu">😡</span>
+                                <span class="intercom-emoji-picker-emoji" title="Vv">😍</span>
+                                <span class="intercom-emoji-picker-emoji" title="Xx">😩</span>
+                                <span class="intercom-emoji-picker-emoji" title="Yy">😭</span>
+                                <span class="intercom-emoji-picker-emoji" title="Ww">😳</span>
+                                <span class="intercom-emoji-picker-emoji" title="Zz">😠</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="intercom-composer-popover-caret"></div>
+        </div>
+            <div class="form-group">
+                <label for="converted-text">Kết quả:</label>
+                <button style="margin-bottom:0.5rem;" id="copy-result" class="btn btn-default">Sao chép</button>
+                <button style="margin-bottom:0.5rem;" id="transTypeBtn" class="btn btn-default">Chuyển loại dịch</button>
+                <button id="emoji-picker" class="chat-input-tool" title="Xh"> 
+                <svg preserveAspectRatio="xMidYMid" viewBox="0 0 24 24" style="width: 30px; height: 18px;">
+                    <path d="M12 24C5.38 24 0 18.62 0 12S5.38 0 12 0s12 5.38 12 12-5.38 12-12 12zm0-22C6.5 2 2 6.5 2 12s4.5 10 10 10 10-4.5 10-10S17.5 2 12 2zm0 18c-2.9 0-5.56-1.75-6.9-4.57-.24-.5-.03-1.1.47-1.33.5-.24 1.1-.03 1.33.47C7.9 16.67 9.86 18 12 18c2.15 0 4.1-1.3 5.1-3.43.23-.5.83-.7 1.33-.47.5.23.7.83.47 1.33C17.58 18.25 14.93 20 12 20zm4-8c-1.1 0-2-.9-2-2s.9-2 2-2 2 .9 2 2-.9 2-2 2zm-8 0c-1.1 0-2-.9-2-2s.9-2 2-2 2 .9 2 2-.9 2-2 2z" fill="#fff"></path>
+                </svg>
+            </button>
+                <textarea readonly="true" class="form-control" rows="8" id="converted-text" style="font-size: 15pt ; font-family: Apple Color Emoji,Segoe UI Emoji,NotoColorEmoji,Segoe UI Symbol,Android Emoji,EmojiSymbols"></textarea>
+            </div>
                 </p> .... 
             </footer>
             <div id="myModal" class="modal fade" role="dialog">
@@ -51,3 +107,4 @@
             <script src="https://cdn.jsdelivr.net/gh/thekondrashov/ie10-viewport@1.0/js/ie10-viewport.min.js" type="text/javascript"></script>
             <script type="text/javascript" src="script.js"></script>
             <script type="text/javascript" src="emoji.js"></script>
+	<div><body>
