--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<head>
+<html lang="en"><head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -10,21 +10,7 @@
         <link href="https://cdn.jsdelivr.net/gh/thekondrashov/ie10-viewport@1.0/css/ie10-viewport.min.css" rel="stylesheet">
         <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
     </head>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-<body class="" style="">
+    <body class="" style="">
         <div class="container col-md-8 col-md-offset-2">
             <div class="header clearfix">
                 <nav>
@@ -129,4 +115,4 @@
             
     
 
-</div></body>
+</div></body></html>
