--- a/xettuyen.html
+++ b/xettuyen.html
@@ -1,115 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title> </title>	
+  <title> Huynh Phuoc An </title>	
 </head>
 <body>
 
-  	<h1> test </h1>
-
-  Điểm TBMCN 9 <input type="text" id="tbmcn9">
-    <br>
-  Điểm TBM Văn 9 <input type="text" id="v9">
-    <br>
-  Điểm TBM Toán 9 <input type="text" id="t9">
-  	<br>
-  Điểm TBM Anh 9 <input type="text" id="a9">
-  	<br>
-
-    <script>
-   var x=1;
-    documet.write(x);
-    </script>
-
-  Kết quả <input type="text" id="kq1">
-  <button onclick="tongdiem1()"> Xem </button> 
-  <script type="text/javascript">                                                                                                                      
-      function tongdiem1() {
-        var tbmcn9 = documet.getElementById('tbmcn9').value;
-        var v9 = documet.getElementById('v9').value;
-        var t9 = documet.getElementById('t9').value;
-        var a9 = documet.getElementById('a9').value;
-        var kq1 = 0 ;
-
-      kq1 = 
-        documet.getElementById('kq1').value = kq1;
-        documet.write(kq1);
-          
-      }
-  </script> 
-
-    <br>
-    
-  Học Lực 6
-  	<select id="hl6">
-      <option> Giỏi 		
-      <option> Khá 			
-      <option> Trung bình 	
-      <option> Yếu    
-  	<select>
-  	<br>
-
-   Học Lực 7
-  	<select id="hl7">
-      <option> Giỏi 		
-      <option> Khá 			
-      <option> Trung bình 	
-      <option> Yếu    
-  	<select>
-  	<br>
-
-   Học Lực 8
-  	<select id="hl8">
-      <option> Giỏi 		
-      <option> Khá 			
-      <option> Trung bình 	
-      <option> Yếu    
-  	<select>
-  	<br>
-
-   Học Lực 9
-  	<select id="hl9">
-      <option> Giỏi 		
-      <option> Khá 			
-      <option> Trung bình 	
-      <option> Yếu    
-  	<select>
-  	<br>
-
-  	Hạnh Kiểm 6
-  	<select id="hk6">
-      <option> Tốt		
-      <option> Khá 			
-      <option> Trung bình 	  
-  	<select>
-  	<br>
-
-  	Hạnh Kiểm 7
-  	<select id="hk7">
-      <option> Tốt		
-      <option> Khá 			
-      <option> Trung bình 	  
-  	<select>
-  	<br>
-
-  	Hạnh Kiểm 8
-  	<select id="hk8">
-      <option> Tốt		
-      <option> Khá 			
-      <option> Trung bình 	  
-  	<select>
-  	<br>
-
-  	Hạnh Kiểm 9
-  	<select id="hk9">
-      <option> Tốt		
-      <option> Khá 			
-      <option> Trung bình 	  
-  	<select>
-  	<br>
-
-  	Kết quả <input type="text" id="kq2">
-	<input type="button" value="Xem" onclick="tongdiem">
+  	<h1>  </h1>
+	<button> Next </button>
+ 
 
 </body>
 </html>
