--- a/index.html
+++ b/index.html
@@ -6,7 +6,13 @@
 <body>
 
   	<h1>  </h1>
-	<button> Next </button>
+	<button onclick="myfunction()"> Next </button>
+	<script type="text/javascript">
+		function myfunction() {
+			alert(ngu di me );
+		
+		}
+		</scipt>
  
 
 </body>
