--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 
-  	<h1>  </h1>
+  	<h1> đoán cc nè :) </h1>
 	<button onclick="myfunction()"> Next </button>
 	<script type="text/javascript">
 		function myfunction() {
