--- a/index.html
+++ b/index.html
@@ -10,10 +10,11 @@
 	<script type="text/javascript">
 		function myfunction() {
 			alert(ngu di me );
-		
 		}
-		</scipt>
- alert(content);
-
+</script>
+ 
+		<script>	
+	alert(content);
+</script>
 </body>
 </html>
